# dygma-sdk-rs

./: Cargo.toml  README.md
api/: .gitignore  Cargo.toml  generate-out.nu  keymap.txt
api/src/: devices.rs  focus_api.rs  lib.rs  main.rs  parsing.rs  schema.rs  serial_port.rs
api/src/devices/: defy.rs
api/src/focus_api/: parsing.rs
api/src/focus_api/parsing/: focus_api.rs  keymap.rs  macros.rs  superkeys.rs
api/src/focus_api/parsing/keymap/: keycode_tables.rs
api/src/parsing/: focus_api.rs  keymap.rs  macros.rs  superkeys.rs
api/src/parsing/keymap/: keycode_tables.rs
api/src/schema/: bazecore_config.rs
macros/: Cargo.toml
macros/src/: ast.rs  codegen.rs  ir.rs  lib.rs  parse.rs
macros/src/codegen/: impl_from_enum_for_u16.rs  impl_from_str_for_key_kind_enum.rs  impl_from_str_for_key_table_enums.rs  impl_from_u16_for_key_kind.rs  key_kind_enum.rs  key_table_enum.rs  mpl_partial_eq_key_table_enum_for_key_kind.rs
