[package]
name = "dygma-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
async-hid = { version = "0.4.4", features = ["tokio"], default-features = false }
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
error-stack = "0.5.0"
futures = "0.3.31"
itertools = "0.14.0"
macros = { path = "../macros" }
paste = "1.0.15"
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strsim = "0.11.1"
tokio = { version = "1.47.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["full"] }
tracing = "0.1.41"
usbhidusage = "0.1.3"
winnow = { version = "0.7.13", features = ["unstable-doc"] }
