[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full"] }
